--- a/how.html
+++ b/how.html
@@ -7,7 +7,17 @@
 
     <title>Risq: Fantasy Finance</title>
     <meta name='description' content='Risq: Competitive Fantasy Finance'>
-    <meta name='author' content='Risqt'>
+    <meta name='author' content='Risq'>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W0DJ33ZGTQ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-W0DJ33ZGTQ');
+    </script>
 
     <!-- <link rel='stylesheet' href='css/styles.css?v=1.0'> -->
     <style>
