--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <title>Risq: Fantasy Finance</title>
   <meta name='description' content='Risq: Competitive Fantasy Finance'>
   <meta name='author' content='Risq'>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-W0DJ33ZGTQ"></script>
