add skeleton, make responsive

--- a/how.html
+++ b/how.html
@@ -13,6 +13,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
+    <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-W0DJ33ZGTQ"></script>
     <script>
@@ -31,13 +34,9 @@
             font-family: Karla;
         }
 
-        .center {
-            margin: 0;
-            position: absolute;
-            top: 40%;
-            left: 50%;
-            -ms-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
+        .top {
+            margin-top: 10%;
+
         }
 
         .footer {
@@ -67,11 +66,11 @@
 
 <body>
 
-    <div class='center'>
+    <div class='container top' style="margin-bottom: 100px;">
         <div
-            style='width: 50px;margin:20px;text-align: left;background:linear-gradient(80.39deg, #C200FB -1.98%, #FF6F59 95.31%);-webkit-background-clip: text;-webkit-text-fill-color: transparent;'>
+            style='width: 100px;margin:20px;text-align: left;background:linear-gradient(80.39deg, #C200FB -1.98%, #FF6F59 95.31%);-webkit-background-clip: text;-webkit-text-fill-color: transparent;'>
             <a href='index.html' style='text-decoration: none;'>
-                <h2>Risq</h2>
+                <h4>Risq</h4>
             </a>
         </div>
         <div style='width:300;text-align: left;margin:20px;'>
@@ -90,8 +89,8 @@
         <div style='text-align: left;'>
             <a class="typeform-share button" href="https://form.typeform.com/to/xv2ibJnT?typeform-medium=embed-snippet"
                 data-mode="popup"
-                style="width:150px;display:inline-block;text-decoration:none;background:linear-gradient(80.39deg, #C200FB -1.98%, #FF6F59 95.31%);-webkit-background-clip: text;-webkit-text-fill-color: transparent;cursor:pointer;font-family:Karla;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;"
-                data-size="100" data-hide-headers="true" data-hide-footer="true" target="_blank">Enter waitlist </a>
+                style="font-size:2rem;width:400px;display:inline-block;text-decoration:none;background:linear-gradient(80.39deg, #C200FB -1.98%, #FF6F59 95.31%);-webkit-background-clip: text;-webkit-text-fill-color: transparent;cursor:pointer;font-family:Karla;line-height:50px;text-align:center;margin:0;height:50px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;"
+                data-size="100" data-hide-headers="true" data-hide-footer="true" target="_blank">Join waitlist</a>
         </div>
     </div>
 
