--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="manifest" href="/site.webmanifest">
 
   <link rel="stylesheet" href="css/normalize.css">
@@ -35,19 +36,14 @@
     }
 
     .center {
-        margin-top: 20px;
-        margin-bottom: 20px;
-      }
-
-    @media (min-width: 750px) {
-      .center {
-        margin: 0;
-        position: absolute;
-        top: 40%;
-        left: 50%;
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-      }
+      margin: 0;
+      margin-top: 50px;
+      margin-bottom: 80px;
+      position: absolute;
+      top: 40%;
+      left: 50%;
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
     }
 
     .footer {
@@ -70,7 +66,7 @@
     <div style='text-align: center;width:100%;'>
       <a class="typeform-share button" href="https://form.typeform.com/to/xv2ibJnT?typeform-medium=embed-snippet"
         data-mode="popup"
-        style="font-size:2rem;width:400px;display:inline-block;text-decoration:none;background: linear-gradient(80.39deg, #C200FB -1.98%, #FF6F59 95.31%);color:white;cursor:pointer;font-family:Karla;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;"
+        style="width:400px;display:inline-block;text-decoration:none;background: linear-gradient(80.39deg, #C200FB -1.98%, #FF6F59 95.31%);color:white;cursor:pointer;font-family:Karla;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;"
         data-size="100" data-hide-headers="true" data-hide-footer="true" target="_blank">Enter waitlist </a>
     </div>
   </div>
