--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     .center {
       margin: 0;
       margin-top: 50px;
-      margin-bottom: 80px;
+      margin-bottom: 100px;
       position: absolute;
       top: 40%;
       left: 50%;
@@ -52,7 +52,6 @@
       bottom: 0;
       width: 100%;
       text-align: center;
-      margin-bottom: 30px;
     }
   </style>
 
@@ -71,8 +70,7 @@
     </div>
   </div>
   <div class='footer'>
-    <p><a style='color: #C200FB;margin: 10px;' href='index.html'>Home</a> <a style='color: #C200FB;margin: 10px;'
-        href='how.html'>How it works</a> <a style='color: #C200FB; margin: 10px;'
+    <p><a style='color: #C200FB; margin: 5px;'
         href='mailto:risq.main@gmail.com'>Contact</a></p>
   </div>
 
