fix how gradient safari

--- a/how.html
+++ b/how.html
@@ -69,9 +69,9 @@
 
     <div class='container top' style="margin-bottom: 100px;">
         <div
-            style='width: 100px;margin:20px;text-align: left;background:linear-gradient(80.39deg, #C200FB -1.98%, #FF6F59 95.31%);-webkit-background-clip: text;-webkit-text-fill-color: transparent;'>
+            style='width: 100px;margin:20px;text-align: left;background:linear-gradient(80.39deg, #C200FB -1.98%, #FF6F59 95.31%);-webkit-background-clip: text;-webkit-text-fill-color: transparent;-webkit-mask-image:linear-gradient(80.39deg, #C200FB -1.98%, #FF6F59 95.31%);'>
             <a href='index.html' style='text-decoration: none;'>
-                <h4>Risq</h4>
+                <h4 style='display: inline'>Risq</h4>
             </a>
         </div>
         <div style='width:300;text-align: left;margin:20px;'>
