--- a/how.html
+++ b/how.html
@@ -76,16 +76,16 @@
         </div>
         <div style='width:300;text-align: left;margin:20px;'>
             <p class='largeText'>1. Join a Game ($5 buy-in)</p>
-            <span class='smallText'><strong>get 50% off if you refer a friend </strong> (for both of you!)</span>
+            <span class='smallText'><strong>Get 50% off if you refer a friend! </strong> (for both of you)</span>
         </div>
         <div style='width:400;text-align: left;margin:20px;'>
             <p class='largeText'>2. Trade stocks with fake money</p>
-            <span class='smallText'>daytrade to your hearts content, or buy and hold – anything to get that $$$</span>
+            <span class='smallText'>Daytrade to your hearts content, or buy and hold – anything to get that $$$.</span>
         </div>
         <div style='width:400;text-align: left;margin:20px;'>
-            <p class='largeText'>3. Gloat (and profit!)</p>
-            <span class='smallText'>the top half of players profit! <strong>If you’re first, you triple your buy in,
-                </strong> and if you’re halfway, you break even – everyone in between gets paid out in a gradient</span>
+            <p class='largeText'>3. <span style="color: #C200FB"> Win!</span> (and profit!)</p>
+            <span class='smallText'>The top 50% of players profit! <strong>If you’re first, you triple your buy in.
+                </strong> If you’re halfway, you make back your buy-in. Everyone else gets somewhere in between.</span>
         </div>
         <div style='text-align: left;'>
             <a class="typeform-share button" href="https://form.typeform.com/to/xv2ibJnT?typeform-medium=embed-snippet"
