--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     <div style='text-align: center;width:100%;'>
       <a class="typeform-share button" href="https://form.typeform.com/to/xv2ibJnT?typeform-medium=embed-snippet"
         data-mode="popup"
-        style="width:400px;display:inline-block;text-decoration:none;background: linear-gradient(80.39deg, #C200FB -1.98%, #FF6F59 95.31%);color:white;cursor:pointer;font-family:Karla;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;"
-        data-size="100" data-hide-headers="true" data-hide-footer="true" target="_blank">Enter waitlist </a>
+        style="width:300px;display:inline-block;text-decoration:none;background: linear-gradient(80.39deg, #C200FB -1.98%, #FF6F59 95.31%);color:white;cursor:pointer;font-family:Karla;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;"
+        data-size="100" data-hide-headers="true" data-hide-footer="true" target="_blank">Join waitlist </a>
     </div>
   </div>
   <div class='footer'>
