--- a/how.html
+++ b/how.html
@@ -65,7 +65,7 @@
 
 </head>
 
-<body>
+<body style="background-color: #ecf0f1">
 
     <div class='container top' style="margin-bottom: 100px;">
         <div
@@ -76,7 +76,7 @@
         </div>
         <div style='width:300;text-align: left;margin:20px;'>
             <p class='largeText'>1. Join a Game ($5 buy-in)</p>
-            <span class='smallText'><strong>Get 50% off if you refer a friend! </strong> (for both of you)</span>
+            <span class='smallText'><strong>Get 50% off if you refer a friend! </strong> (for both of you). We're planning to expand dollar values for buy-ins soon.</span>
         </div>
         <div style='width:400;text-align: left;margin:20px;'>
             <p class='largeText'>2. Trade stocks with fake money</p>
