--- a/how.html
+++ b/how.html
@@ -20,11 +20,14 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-W0DJ33ZGTQ"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
 
-    gtag('config', 'G-W0DJ33ZGTQ');
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-W0DJ33ZGTQ');
     </script>
 
     <!-- <link rel='stylesheet' href='css/styles.css?v=1.0'> -->
@@ -76,7 +79,8 @@
         </div>
         <div style='width:300;text-align: left;margin:20px;'>
             <p class='largeText'>1. Join a Game ($5 buy-in)</p>
-            <span class='smallText'><strong>Get 50% off if you refer a friend! </strong> (for both of you). We're planning to expand dollar values for buy-ins soon.</span>
+            <span class='smallText'><strong>Get 50% off if you refer a friend! </strong> (for both of you). We're
+                planning to expand dollar values for buy-ins soon.</span>
         </div>
         <div style='width:400;text-align: left;margin:20px;'>
             <p class='largeText'>2. Trade stocks with fake money</p>
@@ -88,10 +92,85 @@
                 </strong> If you’re halfway, you make back your buy-in. Everyone else gets somewhere in between.</span>
         </div>
         <div style='text-align: left;'>
-            <a class="typeform-share button" href="https://form.typeform.com/to/xv2ibJnT?typeform-medium=embed-snippet"
-                data-mode="popup"
-                style="font-size:2rem;width:400px;display:inline-block;text-decoration:none;background:linear-gradient(80.39deg, #C200FB -1.98%, #FF6F59 95.31%);-webkit-background-clip: text;-webkit-text-fill-color: transparent;cursor:pointer;font-family:Karla;line-height:50px;text-align:center;margin:0;height:50px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;"
-                data-size="100" data-hide-headers="true" data-hide-footer="true" target="_blank">Join waitlist</a>
+            <!-- Begin Mailchimp Signup Form -->
+            <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+            <style type="text/css">
+                #mc_embed_signup {
+                    clear: left;
+                }
+
+                .flex-top {
+                    flex: 1;
+                    display: flex;
+                    flex-direction: column;
+
+                }
+
+                @media (min-width: 480px) {
+                    .flex-top {
+                        flex: 1;
+                        display: flex;
+                        flex-direction: row;
+                    }
+                }
+
+                .flex-email {
+                    flex: 1;
+                }
+
+                @media (min-width: 480px) {
+                    .flex-email {
+                        flex: 2;
+                        align-self: flex-end;
+                        justify-self: flex-end;
+                        text-align: right;
+                        margin-right: 5px;
+                    }
+                }
+
+                .flex-btn {
+                    flex: 1;
+                }
+
+                @media (min-width: 480px) {
+                    .flex-btn {
+                        flex: 1;
+                        align-self: flex-start;
+                        justify-self: flex-start;
+                        text-align: left;
+                    }
+                }
+
+                /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+            We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+            </style>
+            <div id="mc_embed_signup" style='display: flex;flex:1;'>
+                <form
+                    action="https://joinrisq.us1.list-manage.com/subscribe/post?u=be618d1ea001a1907f39dc157&amp;id=b91a092361"
+                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                    target="_self" novalidate>
+                    <div id="mc_embed_signup_scroll" style='margin-top:15px'>
+
+                        <div class='flex-top'>
+                            <div class="flex-email">
+                                <input s type="email" value="" name="EMAIL" class="email" id="mce-EMAIL"
+                                    placeholder="Email Address" required>
+                            </div>
+                            <div class="flex-btn">
+                                <div style="position: absolute; left: -5000px; color: #C200FB" aria-hidden="true"><input
+                                        type="text" name="b_be618d1ea001a1907f39dc157_b91a092361" tabindex="-1"
+                                        value=""></div>
+                                <div><input type="submit"
+                                        style="background:linear-gradient(80.39deg, #C200FB -1.98%, #FF6F59 95.31%);-webkit-background-clip: text;-webkit-text-fill-color: transparent;cursor:pointer;font-family:Karla;text-align:center;margin:0;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;"
+                                        value="Join Waitlist" name="subscribe" id="mc-embedded-subscribe"
+                                        class="button"></div>
+                            </div>
+
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <!--End mc_embed_signup-->
         </div>
     </div>
 
