--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-W0DJ33ZGTQ"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
     gtag('js', new Date());
 
     gtag('config', 'G-W0DJ33ZGTQ');
@@ -39,6 +42,7 @@
       margin-top: 20%;
       padding-bottom: 50px;
     }
+
     @media (min-width: 480px) {
       .center {
         margin: 0;
@@ -49,7 +53,7 @@
         left: 50%;
         -ms-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
-    }
+      }
     }
 
     .footer {
@@ -69,15 +73,88 @@
     </div>
     <br>
     <div style='text-align: center;width:100%;'>
-      <a class="typeform-share button" href="https://form.typeform.com/to/xv2ibJnT?typeform-medium=embed-snippet"
-        data-mode="popup"
-        style="width:300px;display:inline-block;text-decoration:none;background: linear-gradient(80.39deg, #C200FB -1.98%, #FF6F59 95.31%);color:white;cursor:pointer;font-family:Karla;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;"
-        data-size="100" data-hide-headers="true" data-hide-footer="true" target="_blank">Join waitlist </a>
+      <!-- Begin Mailchimp Signup Form -->
+      <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+      <style type="text/css">
+        #mc_embed_signup {
+          clear: left;
+        }
+
+        .flex-top {
+          flex: 1;
+          display: flex;
+          flex-direction: column;
+
+        }
+
+        @media (min-width: 480px) {
+          .flex-top {
+            flex: 1;
+            display: flex;
+            flex-direction: row;
+          }
+        }
+
+        .flex-email {
+          flex: 1;
+        }
+
+        @media (min-width: 480px) {
+          .flex-email {
+            flex: 2;
+            align-self: flex-end;
+            justify-self: flex-end;
+            text-align: right;
+            margin-right: 5px;
+          }
+        }
+
+        .flex-btn {
+          flex: 1;
+        }
+
+        @media (min-width: 480px) {
+          .flex-btn {
+            flex: 1;
+            align-self: flex-start;
+            justify-self: flex-start;
+            text-align: left;
+          }
+        }
+
+        /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+            We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+      </style>
+      <div id="mc_embed_signup"
+        style='text-align: center;display: flex;flex:1; align-items: center; justify-content: center;'>
+        <form action="https://joinrisq.us1.list-manage.com/subscribe/post?u=be618d1ea001a1907f39dc157&amp;id=b91a092361"
+          method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+          target="_self" novalidate>
+          <div id="mc_embed_signup_scroll">
+
+            <div class='flex-top' style='text-align: center;'>
+              <div class="flex-email">
+                <input s type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email Address"
+                  required>
+              </div>
+              <div class="flex-btn">
+                <div style="position: absolute; left: -5000px; color: #C200FB" aria-hidden="true"><input type="text"
+                    name="b_be618d1ea001a1907f39dc157_b91a092361" tabindex="-1" value=""></div>
+                <div><input type="submit"
+                    style="background:linear-gradient(80.39deg, #C200FB -1.98%, #FF6F59 95.31%);-webkit-background-clip: text;-webkit-text-fill-color: transparent;cursor:pointer;font-family:Karla;text-align:center;margin:0;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;"
+                    value="Join Waitlist" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+              </div>
+
+            </div>
+          </div>
+        </form>
+      </div>
+      <!--End mc_embed_signup-->
+
     </div>
   </div>
   <div class='footer'>
-    <p><a style='color: #C200FB; margin: 5px;'
-        href='mailto:risq.main@gmail.com'>Contact</a></p>
+    <p><a style='color: #C200FB; margin: 5px;' href='mailto:risq.main@gmail.com'>Contact</a></p>
   </div>
 
 
