--- a/how.html
+++ b/how.html
@@ -93,7 +93,7 @@
         </div>
         <div style='text-align: left;'>
             <!-- Begin Mailchimp Signup Form -->
-            <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+            <div id='mailchimp-signup'>
             <style type="text/css">
                 #mc_embed_signup {
                     clear: left;
@@ -170,6 +170,7 @@
                     </div>
                 </form>
             </div>
+        </div>
             <!--End mc_embed_signup-->
         </div>
     </div>
